--- a/socket/package.json
+++ b/socket/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "dotenv": "^14.2.0"
   }
 }
