--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
+REACT_APP_PUBLIC_FOLDER = https://social-media-production.up.railway.app/images/
+REACT_APP_API = https://social-media-production.up.railway.app/api
+REACT_APP_SOCKET = ws://localhost:3002
