--- a/client/package.json
+++ b/client/package.json
@@ -33,13 +33,15 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not ie 11",
+      "not op_mini all",
+      "not chrome < 51",
+      "not safari < 10"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://social-media-production.up.railway.app/api"
+  }
 }
